# anilist.io

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  commit_chores.sh  cookiecutter-config-file.yml  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: feature_request.md  question.md
.github/workflows/: build.yml  report.yml
anilist/: Anilist.py  __init__.py
anilist/client/: __init__.py  base_enum.py  base_object.py
anilist/errors/: __init__.py  custom_errors.py
anilist/queries/: media_query.py
anilist/types/: QueryObject.py  __init__.py  enums.py  media_data.py  media_objects.py  miscellaneous.py  user_data.py
docker/: README.md
src/: Anilist.py  __init__.py
tests/: __init__.py  base_test.py  commons.py  conftest.py  context.py  test_dry.py  test_errors.py  test_objects.py
