# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "anilist.io"
version = "0.1.0"
description = "Asyncio-based wrapper to interact with Anilist API"
readme = "README.md"
authors = [
  "demon-rem <demonicrem@gmail.com>"
]
license = "MIT"
repository = "https://github.com/demon-rem/anilist.io"
homepage = "https://github.com/demon-rem/anilist.io"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"anilist" = "anilist.__main__:app"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.3"
cchardet = "^2.1.7"
aiodns = "^2.0.0"

[tool.poetry.dev-dependencies]
darglint = "^1.5.7"
isort = "^5.5.4"
pyupgrade = "^2.7.2"
black = "^20.8b1"
mypy = "^0.790"
bandit = "^1.6.2"
safety = "^1.9.0"
pytest = "^6.0.1"
pylint = "^2.5.3"
pydocstyle = "^5.0.2"
pre-commit = "^2.9.2"
pytest-cov = "^2.10.1"
vcrpy = "^4.1.1"

[tool.black]
# https://github.com/psf/black
target-version = ["py37"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
